cros: Fix crash when adding a user after removing one.

Caused by a DCHECK crash from a pointer pointing to deallocated memory.

Bug: 866535
Change-Id: I96d76aeaeb8c89316cd6ffb237928cd2bfcfb744
Reviewed-on: https://chromium-review.googlesource.com/1165850
Reviewed-by: Xiaoyin Hu <xiaoyinh@chromium.org>
Commit-Queue: Jacob Dufault <jdufault@chromium.org>
Cr-Commit-Position: refs/heads/master@{#581326}
Former-commit-id: fb01a3b79d9e1ee1c26da5281eb7c710205a5be4